--- a/templates/shop/items.html
+++ b/templates/shop/items.html
@@ -2,8 +2,10 @@
 {% load shop_filter %}
 <div class="row">
   {% for item in items %}
+    
     <!-- Single Product Area -->
     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
+     
       <div class="single-product-wrapper">
         <!-- Product Image -->
         <div class="product-img wrap-fixed-height">
@@ -36,7 +38,9 @@
                     <i class="fa fa-star-o" aria-hidden="true"></i>
                 {% endfor %}
           </div>
+           
           {% if item.in_stock %}
+           
             <div class="cart">
               <button
               type="submit"
@@ -45,6 +49,15 @@
               class="btn"
               id="add-button"
             >
+             {% for item_cart in cart %}
+              {% if item_cart.item.id == item.id %}
+                  <input type="hidden" value="{{  item_cart.qty }}" id="item-qty-in">
+                  {{ item_cart.qty }} 
+                  {% with cart.check_item_availability as is_available %}
+                  <input type="hidden" value="{{ item_cart.available }}" id="item-available">
+                  {% endwith %}
+              {% endif %}
+            {% endfor %}
               <img src="{% static 'img/core-img/cart.png' %}" alt="Cart"
               />
             </button>
