deployment slider fix without jquery

--- a/templates/shop/price.html
+++ b/templates/shop/price.html
@@ -1,31 +1,17 @@
+{% load static %}
 <div class="widget price mb-50">
     <!-- Widget Title -->
     <h6 class="widget-title mb-30">Ціна</h6>
 
     <div class="widget-desc">
-    <div class="slider-range">
-        <div
-        data-min="{{ smallest_price }}"
-        data-max="{{ biggest_price }}"
-        data-unit="₴"
-        class="slider-range-price ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all"
-        data-value-min="{{ min_price }}"
-        data-value-max="{{ max_price }}"
-        data-label-result=""
-        >
-        <div class="ui-slider-range ui-widget-header ui-corner-all"></div>
-        <span
-            class="ui-slider-handle ui-state-default ui-corner-all"
-            tabindex="0"
-        ></span>
-        <span
-            class="ui-slider-handle ui-state-default ui-corner-all"
-            tabindex="0"
-        ></span>
+        <div class="slider-range">
+            <input type="range" min="{{ smallest_price }}" max="{{ biggest_price }}" value="{{ min_price }}" class="slider slider-price" id="min_price">
+            <input type="range" min="{{ smallest_price }}" max="{{ biggest_price }}" value="{{ max_price }}" class="slider slider-price" id="max_price">
+            <!-- Hidden inputs for min and max price -->
+            <input type="hidden" id="min_price_input" name="min_price" value="{{ min_price }}">
+            <input type="hidden" id="max_price_input" name="max_price" value="{{ max_price }}">
+            <div class="range-price" id="range_price">{{ min_price }}₴ - {{ max_price }}₴</div>
         </div>
-        {{ filter_form.min_price }}
-        {{ filter_form.max_price }}
-        <div class="range-price">{{ min_price }}₴ - {{ max_price }}₴</div>
-    </div>
     </div>
 </div>
+<script src="{% static 'js/price-slider.js' %}"></script>
