--- a/static/style.css
+++ b/static/style.css
@@ -59,3 +59,25 @@
     right: 0;
     margin: auto;
 }
+
+input[type="range"] {
+  appearance: none;
+  background: transparent;
+  width: 100%;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  background-color: #c7d2d8;
+  border-radius: 15px;
+}
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  background-color: #fbb710;
+  border-radius: 15px;
+  height: 6px;
+  width: 6px;
+  outline: 3px solid #fbb710;
+}
+
+input[type="range"]:focus::-webkit-slider-thumb {
+  outline: 6px solid #fbb710;
+}
