base.html index page links fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       <div class="mobile-nav">
         <!-- Navbar Brand -->
         <div class="amado-navbar-brand">
-          <a href="index.html"><img src="{% static 'img/core-img/logo.png' %}" alt="Logo"></a>
+          <a href="/"><img src="{% static 'img/core-img/logo.png' %}" alt="Logo"></a>
         </div>
         <!-- Navbar Toggler -->
         <div class="amado-navbar-toggler">
@@ -94,7 +94,7 @@
             <div class="single_widget_area">
               <!-- Logo -->
               <div class="footer-logo mr-50">
-                <a href="index.html"
+                <a href="/"
                   ><img src="{% static 'img/core-img/logo2.png' %}" alt="Logo 2"></a>
               </div>
               <!-- Copywrite Text -->
@@ -108,7 +108,10 @@
                 <i class="fa fa-heart-o" aria-hidden="true"></i> by
                 <a href="https://colorlib.com" target="_blank">Colorlib</a> &
                 Re-distributed by
-                <a href="https://themewagon.com/" target="_blank">Themewagon</a>
+                <a href="https://themewagon.com/" target="_blank">Themewagon</a><br>
+                Backend by
+                <a href="https://github.com/vladashvch" target="_blank">vladashvch</a> &
+                <a href="https://github.com/luiqor" target="_blank">luiqor</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
@@ -133,7 +136,7 @@
                   <div class="collapse navbar-collapse" id="footerNavContent">
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item active">
-                        <a class="nav-link" href="/index">Головна сторінка</a>
+                        <a class="nav-link" href="/">Головна сторінка</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/shop">Магазин</a>
